<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>crank_driving_planner</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="satoshi@todo.todo">satoshi</maintainer>
  <license>TODO: License declaration</license>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>
  <exec_depend>rclcpp</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>autoware_auto_system_msgs</exec_depend>
  <exec_depend>autoware_auto_planning_msgs</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
